implemented partenr section

--- a/index.html
+++ b/index.html
@@ -99,6 +99,20 @@
       </div>
     </div>
 
+    <div class="partner-section">
+      <h2 class="text-center">I NOSTRI PARTNER</h2>
+      <div class="row">
+        <div class="col partner_logo"></div>
+        <div class="col partner_logo1"></div>
+        <div class="col partner_logo"></div>
+      </div>
+      <div class="row">
+        <div class="col partner_logo1"></div>
+        <div class="col partner_logo"></div>
+        <div class="col partner_logo1"></div>
+      </div>
+    </div>
+
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
