added section testimonials

--- a/index.html
+++ b/index.html
@@ -112,6 +112,43 @@
         <div class="col partner_logo1"></div>
       </div>
     </div>
+    <!-- CAROUSEL -->
+    <div id="carouselExampleControls" class="carousel slide mt-5 mb-5" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <div class="card ms-auto me-auto" style="width: 25rem;">
+            <img src="./assets/therock.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">"finalmente non abbasso lo sguardo davanti alla corsia degli shampoo al supermercato!"</p>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="card ms-auto me-auto" style="width: 25rem;">
+            <img src="./assets/2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">"Ora vado con piacere negli spogliatoi maschili"</p>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="card ms-auto me-auto" style="width: 25rem;">
+            <img src="./assets/vindiesel.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">"Dopo F&F, Calvoo è ciò che mi ha reso più felice!"</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon bg-danger" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+        <span class="carousel-control-next-icon bg-danger" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
 
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   </body>
